--- a/web/views/layouts/main.html
+++ b/web/views/layouts/main.html
@@ -53,6 +53,10 @@
                                 <a class="nav-link" href="/">
                                 <i class="nav-icon fa fa-dashboard"></i> Dashboard</a>
                             </li>
+                            <li class="nav-item">
+                                    <a class="nav-link" href="/transaction/all/">
+                                    <i class="nav-icon fa fa-table"></i> Get All Transaction</a>
+                                </li>
                         </ul>
                     </nav>
                     <button class="sidebar-minimizer brand-minimizer" type="button"></button>
