--- a/web/views/contents/all-transaction.html
+++ b/web/views/contents/all-transaction.html
@@ -3,18 +3,21 @@
 {{end}}
 
 {{define "breadcrumb"}}
-    Dashboard
+    Get All Users
 {{end}}
 
 
 {{define "body"}}
 <div class="container-fluid">
     <div class="row">
-        <h1>All Transactions</h1>
+        
     </div>
     <div class="row">
         <div class="col-lg-12">
             <div class="card">
+                <div class="card-header">
+                    All Transactions
+                </div>
                 <div class="card-body">
                     <table class="table table-responsive-sm table-bordered">
                         <thead>
