--- a/web/views/contents/index.html
+++ b/web/views/contents/index.html
@@ -22,7 +22,7 @@
                         <h4>Demonstrations:</h4>
                         <p class="lead">
                             <a class="btn btn-primary btn-lg" href="#" role="button">Points Transfer</a>
-                            <a class="btn btn-primary btn-lg" href="#" role="button">Add User</a>
+                            <a class="btn btn-primary btn-lg" href="/add/" role="button">Add User</a>
                             <a class="btn btn-primary btn-lg" href="/transaction/all/" role="button">All Transaction History</a>
                             <a class="btn btn-primary btn-lg" href="#" role="button">Per User Transaction History</a>
                         </p>
