--- a/web/views/layouts/main.html
+++ b/web/views/layouts/main.html
@@ -54,9 +54,13 @@
                                 <i class="nav-icon fa fa-dashboard"></i> Dashboard</a>
                             </li>
                             <li class="nav-item">
-                                    <a class="nav-link" href="/transaction/all/">
-                                    <i class="nav-icon fa fa-table"></i> Get All Transaction</a>
-                                </li>
+                                <a class="nav-link" href="/add/">
+                                <i class="nav-icon fa fa-user-plus"></i> Add Person</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/transaction/all/">
+                                <i class="nav-icon fa fa-table"></i> Get All Transaction</a>
+                            </li>
                         </ul>
                     </nav>
                     <button class="sidebar-minimizer brand-minimizer" type="button"></button>
