--- a/web/views/layouts/main.html
+++ b/web/views/layouts/main.html
@@ -59,7 +59,11 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/transaction/all/">
-                                <i class="nav-icon fa fa-table"></i> Get All Transaction</a>
+                                <i class="nav-icon fa fa-table"></i> All Users</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/transaction/select/">
+                                <i class="nav-icon fa fa-users"></i> User Transaction</a>
                             </li>
                         </ul>
                     </nav>
