--- a/web/views/contents/index.html
+++ b/web/views/contents/index.html
@@ -23,8 +23,8 @@
                         <p class="lead">
                             <a class="btn btn-primary btn-lg" href="#" role="button">Points Transfer</a>
                             <a class="btn btn-primary btn-lg" href="/add/" role="button">Add User</a>
-                            <a class="btn btn-primary btn-lg" href="/transaction/all/" role="button">All Transaction History</a>
-                            <a class="btn btn-primary btn-lg" href="#" role="button">Per User Transaction History</a>
+                            <a class="btn btn-primary btn-lg" href="/transaction/all/" role="button">All Users</a>
+                            <a class="btn btn-primary btn-lg" href="/transaction/select/" role="button">Per User Transaction History</a>
                         </p>
                         <hr class="my-4">
                         <h4 class="text-danger">Project Details</h4>
