Finished Transfer Page

--- a/web/views/contents/index.html
+++ b/web/views/contents/index.html
@@ -21,7 +21,7 @@
                         <hr class="my-4">
                         <h4>Demonstrations:</h4>
                         <p class="lead">
-                            <a class="btn btn-primary btn-lg" href="#" role="button">Points Transfer</a>
+                            <a class="btn btn-primary btn-lg" href="/transfer/" role="button">Points Transfer</a>
                             <a class="btn btn-primary btn-lg" href="/add/" role="button">Add User</a>
                             <a class="btn btn-primary btn-lg" href="/transaction/all/" role="button">All Users</a>
                             <a class="btn btn-primary btn-lg" href="/transaction/select/" role="button">Per User Transaction History</a>
@@ -41,4 +41,7 @@
         </div>
     </div>
 </div>
+{{end}}
+
+{{define "customScripts"}}
 {{end}}
