--- a/web/views/layouts/main.html
+++ b/web/views/layouts/main.html
@@ -65,6 +65,10 @@
                                 <a class="nav-link" href="/transaction/select/">
                                 <i class="nav-icon fa fa-users"></i> User Transaction</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/transfer/">
+                                <i class="nav-icon fa fa-users"></i> Transfer</a>
+                            </li>
                         </ul>
                     </nav>
                     <button class="sidebar-minimizer brand-minimizer" type="button"></button>
@@ -102,6 +106,9 @@
             <script src="/assets/vendors/pace-progress/js/pace.min.js"></script>
             <script src="/assets/vendors/perfect-scrollbar/js/perfect-scrollbar.min.js"></script>
             <script src="/assets/vendors/@coreui/coreui/js/coreui.min.js"></script>
+
+            <!-- Custom Scripts -->
+            {{template "customScripts"}}
         </body>
     </html>
 {{end}}
