update for web integration

--- a/web/views/contents/user-transaction-viewed.html
+++ b/web/views/contents/user-transaction-viewed.html
@@ -30,6 +30,7 @@
                                             <th>Giver</th>
                                             <th>Message</th>
                                             <th>Points Recipient</th>
+                                       <!--     <th>Time</th> -->
                                         </thead>
                                         <tbody>
                                             {{range .Result}}
@@ -41,6 +42,7 @@
                                                 <td>{{.Giver}}</td>
                                                 <td>{{.Message}}</td>
                                                 <td>{{.SentTo}}</td>
+                                             <!--   <td>{{.Timestamp}}</td> -->
                                             </tr>
                                             {{end}}
                                         </tbody>
