--- a/web/views/contents/transfer.html
+++ b/web/views/contents/transfer.html
@@ -26,7 +26,13 @@
                             <p>Another Message</p>
                         </div>
                     {{ end }}
-
+                    
+                    {{ if .Fail }}
+                    <div class="alert alert-danger" role="alert">
+                        <h4 class="alert-heading">Oops!</h4>
+                        <p>{{ .FailMessage }}</p>
+                    </div>
+                    {{ end }}
                     <div class="row">
                         <div class="col-md-3"></div>
                         <div class="col-md-6">
